--- a/yun-music/miniprogram/pages/player/player.wxss
+++ b/yun-music/miniprogram/pages/player/player.wxss
@@ -1,16 +1,20 @@
 /* pages/player/player.wxss */
-.player-container{
-  position:absolute;
-  top: 0;  /*存满整个容器*/
+.player-container {
+  position: absolute;
+  top: 0;
+  /*存满整个容器*/
   bottom: 0;
   left: 0;
   right: 0;
-  filter: blur(40rpx);/*模糊程度*/
-  opacity: 0.5;/*透明*/
+  filter: blur(40rpx);
+  /*模糊程度*/
+  opacity: 0.5;
+  /*透明*/
   z-index: -1;
 }
+
 /*让他们绝对定位，相对于player-info定位*/
-.player-info{
+.player-info {
   text-align: center;
   position: absolute;
   top: 0;
@@ -19,7 +23,7 @@
   right: 0;
 }
 
-.play-mask{
+.play-mask {
   position: absolute;
   top: 0;
   left: 0;
@@ -28,41 +32,55 @@
   z-index: -2;
   background: #222;
 }
-.player-disc{
+
+.player-disc {
   width: 592rpx;
   height: 592rpx;
-  background: url(https://s3.music.126.net/mobile-new/img/disc.png?d3bdd1080a72129346aa0b4b4964b75f=) no-repeat center/contain;/*no-repeat不重复*/
+  background: url(https://s3.music.126.net/mobile-new/img/disc.png?d3bdd1080a72129346aa0b4b4964b75f=) no-repeat center/contain;
+  /*no-repeat不重复*/
   position: absolute;
   left: 50%;
-  transform: translate(-50%,140rpx);
+  transform: translate(-50%, 140rpx);
 }
 
 /*伪元素内容——用于写歌词转盘指针内容*/
-.player-disc::after{
-  content:'' ;/*固定的，插入内容*/
+.player-disc::after {
+  content: '';
+  /*固定的，插入内容*/
   width: 192rpx;
   height: 274rpx;
   position: absolute;
   top: -150rpx;
   left: 266rpx;
   background: url(https://s3.music.126.net/m/s/img/needle.png?702cf6d95f29e2e594f53a3caab50e12) no-repeat center/contain;
-  transform: rotate(-15deg);/*旋转一定角度*/
-  transform-origin: 24rpx 10rpx;/*旋转原点*/
+  transform: rotate(-15deg);
+  /*旋转一定角度*/
+  transform-origin: 24rpx 10rpx;
+  /*z指针停止开始0.5秒过渡*/
+  transform: transform 1s ease;
 }
 
-.player-img{
+.play.player-disc::after {
+  transform: rotate(0deg);
+}
+
+
+.player-img {
   width: 368rpx;
   height: 368rpx;
-  border-radius: 50%; /*边框圆角*/
-  position: absolute;/*绝对定位*/
-  left: 50%;/*以下四条设置居中*/
+  border-radius: 50%;
+  /*边框圆角*/
+  position: absolute;
+  /*绝对定位*/
+  left: 50%;
+  /*以下四条设置居中*/
   top: 50%;
   margin-top: -184rpx;
   margin-left: -184rpx;
 }
 
 /*设置icon样式*/
-.player-iconfont{
+.player-iconfont {
   position: fixed;
   flex-direction: row;
   bottom: 8%;
@@ -71,14 +89,48 @@
   display: flex;
   align-items: center;
 }
-.player-iconfont .iconfont{
+
+.player-iconfont .iconfont {
   color: #fefefe;
 }
-.icon-shangyishoushangyige,.icon-xiayigexiayishou{
+
+.icon-shangyishoushangyige,
+.icon-xiayigexiayishou {
   font-size: 80rpx;
-  
+
 }
-.icon-bofang{
+
+.icon-bofang,.icon-plus-pause {
   font-size: 120rpx;
   margin: 0 50rpx;
+}
+
+/*主图样式*/
+.rotation {
+  animation: rotation 12s linear infinite;
+  /*表示要做动画，12秒完成一次旋转，infinite无线旋转*/
+  -moz-animation: rotation 12s linear infinite;
+  -webkit-animation: rotation 12s linear infinite;
+  -o-animation: rotation 12s linear infinite;
+}
+.zanplay{
+  animation-play-state: paused;/*定在动画当时暂停的一帧*/
+}
+/*动画关键帧*/
+@keyframes rotation {
+  form {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+/*进度条样式*/
+.bs-progressbar{
+  width: 90%;/*占整行的长度*/
+  position: absolute;
+  left: 50%;/*距左边距*/
+  transform: translateX(-50%);
+  bottom: 24%;
 }
